--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Login</h1>
-        <form action="/signup" method="POST">
+        <form action="/login" method="POST">
         <input type="text" placeholder="Username" name="username" required>
         <input type="password" placeholder="Password" name="password" required>
         <input type="submit" value="Log In">
