setup individual user accounts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,9 @@
         <input type="submit">
     </form>
     
+    <form action="/logout" method="POST">
+        <input type="submit" value="Logout">
+    </form>
 
     <script src='js/main.js'></script>
 </body>
